# Synapse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
kg-out/: GRAPH_REPORT.md  graph.json
synapse/: __init__.py  _minhash.py  analyze.py  build.py  cache.py  cli.py  cluster.py  dedup.py  extract.py  ids.py  ingest.py  parse.py  parse_tex.py  query.py  report.py  schema.py
tests/: conftest.py  test_build.py  test_cache.py  test_extract.py  test_query.py  test_schema.py
